src/test/ui/const-generics/const_evaluatable_checked/feature-gate-const_evaluatable_checked.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/feature-gate-const_evaluatable_checked.rs:6:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: aborting due to previous error

